# name: TestGetSources.test_get_sources_get_multiple_sources
  dict({
    'results': dict({
      '1': dict({
        'description': 'Description for example_drive_1',
        'external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'identifier': '1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'key': 'example_drive_1',
        'name': 'Example Drive 1',
        'pk': 1,
        'source_type': 'Google Drive',
      }),
      '2': dict({
        'description': 'Description for example_drive_2',
        'external_link': None,
        'identifier': '18wZl7T9DU_lf2X5xYFiyH6pATVy8ZlOd',
        'key': 'example_drive_2',
        'name': 'Example Drive 2',
        'pk': 2,
        'source_type': 'Google Drive',
      }),
    }),
  })
# ---
# name: TestPostCards.test_post_cards_get_multiple_cards
  dict({
    'results': dict({
      '17fopRCNRge72U8Hac8pApHZtEalx5kHy': dict({
        'card_type': 'CARD',
        'date': '5th July, 2023',
        'download_link': 'https://drive.google.com/uc?id=17fopRCNRge72U8Hac8pApHZtEalx5kHy&export=download',
        'dpi': 800,
        'extension': 'png',
        'identifier': '17fopRCNRge72U8Hac8pApHZtEalx5kHy',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
        'name': 'Delver of Secrets',
        'priority': 2,
        'searchq': 'delver of secrets',
        'size': 100,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
        'source': 'example_drive_1',
        'source_id': 1,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
      '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA': dict({
        'card_type': 'TOKEN',
        'date': '5th July, 2023',
        'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
        'dpi': 800,
        'extension': 'png',
        'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'name': 'Goblin',
        'priority': 2,
        'searchq': 'goblin',
        'size': 100,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'source': 'example_drive_1',
        'source_id': 1,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
    }),
  })
# ---
# name: TestPostCards.test_post_cards_get_single_card
  dict({
    'results': dict({
      '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA': dict({
        'card_type': 'TOKEN',
        'date': '5th July, 2023',
        'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
        'dpi': 800,
        'extension': 'png',
        'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'name': 'Goblin',
        'priority': 2,
        'searchq': 'goblin',
        'size': 100,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'source': 'example_drive_1',
        'source_id': 1,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
    }),
  })
# ---
